2009-09-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/ExpansionObject.cs: Fixed
	  generics in component types.

	* MonoDevelop.Ide.CodeTemplates/MonoDevelop-templates.xml:
	  Made foreach template more intelligent.

2009-09-17  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj: Add ref to SWF for propgrid enum.

	* MonoDevelop.Ide.CodeTemplates/CodeTemplatePanel.cs: Fix GTK
	  warning.

	* MonoDevelop.Ide.CodeTemplates/ExpansionObject.cs:
	* MonoDevelop.Ide.CodeTemplates/CodeTemplateListDataProvider.cs:
	  Track API.

	* MonoDevelop.Ide.CodeTemplates/EditTemplateDialog.cs: Use the
	  PropertyGrid for displaying variables, as this allows them
	  to be edited.

	* MonoDevelop.Ide.CodeTemplates/CodeTemplateVariable.cs: Mark
	  up with attributes for the propgrid. Use a custom class for
	  the value pairs so we can name the values and mark it up
	  too.

2009-09-17  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Templates/FileTemplate.cs: Make file
	  template loading failures also not fatal, and improve error
	  message.

2009-09-17  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Templates/ProjectTemplate.cs: Downgrade
	  "fatal" error when loading templates to a normal error. Add
	  more information to the error string.

2009-09-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs:
	  No longer trying to turn on code completion on action keys
	  (like cursor keys) - should speed things up on slower
	  machines.

2009-09-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/MonoDevelop-templates.xml:
	  Fixed eventargs template.

2009-09-14  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/RootWorkspace.cs: Don't close the
	  workspace if the users click on Cancel when asked to save a
	  file. Fixes bug #538371 - Canceling the closing of a